--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "fanatico": {
+    "app": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -75,11 +75,11 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "fanatico:build"
+            "browserTarget": "app:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "fanatico:build:production"
+              "browserTarget": "app:build:production"
             },
             "ci": {
               "progress": false
@@ -89,7 +89,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "fanatico:build"
+            "browserTarget": "app:build"
           }
         },
         "test": {
@@ -134,14 +134,14 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "fanatico:serve"
+            "devServerTarget": "app:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "fanatico:serve:production"
+              "devServerTarget": "app:serve:production"
             },
             "ci": {
-              "devServerTarget": "fanatico:serve:ci"
+              "devServerTarget": "app:serve:ci"
             }
           }
         },
@@ -150,7 +150,7 @@
           "options": {
             "prerender": false,
             "ssr": false,
-            "browserTarget": "fanatico:build:production",
+            "browserTarget": "app:build:production",
             "firebaseProject": "fanatico-db",
             "firebaseHostingSite": "fanatico"
           }
